src/main/java/com/example/demo3/_core/errors/Exception500.java
package com.example.demo3._core.errors;

public class Exception500 extends RuntimeException{

    public Exception500(String msg) {
        super(msg);
    }
}
